<resources>
    <string name="app_name">Music Collection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search_button_text">Search</string>
    <string name="nav_header_title">Music Collection</string>
    <string name="nav_collection">Your Collection</string>
    <string name="nav_search">Search Music</string>
    <string name="nav_home">Home</string>
    <string name="summary_title">Summary:</string>
    <string name="tracks_title">Tracks:</string>
    <string name="tags_title">Tags:</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_tip">Don\'t have an account? Click this.</string>
    <string name="username_required">Username (Required)</string>
    <string name="email_required">Email (Required)</string>
    <string name="password_required">Password (Required)</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="username">Username</string>
    <string name="followed_users">Followed Users</string>
    <string name="search_users">Search Users</string>
    <string name="title">Music Collection</string>
    <string name="my_name">Jeroen Terstall</string>
    <string-array name="search_option">
        <item>Track</item>
        <item>Artist</item>
        <item>Album</item>
    </string-array>
</resources>
