<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/show_album_info_layout">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/album_info_image"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/album_info_image"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/album_info_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/album_info_artist"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="30dp"
            android:layout_below="@id/album_info_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/summary_title"
            android:text="@string/summary_title"
            android:textSize="16sp"
            android:layout_below="@id/album_info_artist"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/summary_title"
            android:layout_marginBottom="30dp"
            android:id="@+id/album_info_summary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/album_info_summary"
            android:id="@+id/tracks_title"
            android:text="@string/tracks_title"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/album_info_tracks"
            android:layout_below="@id/tracks_title"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/album_info_tracks"
            android:id="@+id/tags_title"
            android:text="@string/tags_title"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/album_info_tags"
            android:layout_below="@id/tags_title"/>
    </RelativeLayout>
</ScrollView>